remove clearfix that is no longer necessary and cause spacing issue

--- a/src/util.scss
+++ b/src/util.scss
@@ -36,16 +36,6 @@
 	margin-left: auto;
 	padding-left:  (30px / 2);
 	padding-right: (30px / 2);
-
-	// Bootstrap's clearfix
-	&:before,
-	&:after {
-		content: " "; // 1
-		display: table; // 2
-	}
-	&:after {
-		clear: both;
-	}
 }
 
 @mixin clearfix {
